# crypto-mcp-server

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
crypto_mcp/: __init__.py  exceptions.py  server.py
crypto_mcp/adapters/: __init__.py  ccxt_adapter.py  mock_adapter.py
crypto_mcp/utils/: cache.py
tests/: test_adapter.py  test_cache.py  test_ccxt_adapter.py  test_server.py
